# local-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
agent_service/: __init__.py  __main__.py  agent.py  config.py  errors.py  main.py  mcp_transport.py  oauth_refresh.py  prompts.py
deploy/: Caddyfile.example  OPERATIONS.txt  docker-compose.yml
deploy/systemd/: ollama-mcp-agent.service
docs/: OPENSHOP_MCP_TOOLS.md
scripts/: openshop_oauth_login.py  probe_mcp_auth.py  verify_mcp_env.py
