[project]
name = "ollama-mcp-agent"
version = "0.1.0"
description = "HTTP agent: Ollama (OpenAI-compatible) + remote MCP tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.8",
  "openai>=1.40",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic-settings>=2.0",
  "httpx>=0.27",
]

[project.scripts]
ollama-mcp-agent = "agent_service.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_service"]
